Fix navbar alignment

--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,17 @@ body {
   color: rgba(62, 5, 128, 0.658);
 }
 
-/* .navbar-dark .navbar-nav .nav-link {
-  color: rgb(255, 255, 255);
-  font-weight: 900;
-} */
+.navbar.scrolled {
+  background: white;
+  transition: background 800ms;
+}
 
 .navbar-expand-lg .navbar-nav .nav-link {
   padding-right: 0.1rem;
   padding-left: 0.1rem;
   margin-right: 0.5rem;
   padding-left: 0.5rem;
-  color: #40514e;
+  color: #5f5f5f;
 }
 
 a.navbar-brand:hover {
@@ -36,7 +36,7 @@ a.nav-link:hover {
 }
 
 a.navbar-brand {
-  color: #40514e !important;
+  color: #4d4d4d !important;
 }
 
 h1 {
